--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "typescript": "^4.7.4"
   },
   "devDependencies": {
-    "@types/pug": "^2.0.6"
+    "@types/pug": "^2.0.6",
+    "tailwindcss": "^3.1.6"
   }
 }
